--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ astroid==2.5.1
 Django==3.1.7
 django-filter==2.4.0
 djangorestframework==3.12.2
+dynaconf==3.1.4
 isort==5.7.0
 lazy-object-proxy==1.5.2
 Markdown==3.3.4
 mccabe==0.6.1
+mimesis==4.1.3
 pkg-resources==0.0.0
 pylint==2.7.2
 pytz==2021.1
