--- a/settings.yaml
+++ b/settings.yaml
@@ -9,12 +9,16 @@ default:
     - django.contrib.sessions
     - django.contrib.messages
     - django.contrib.staticfiles
+    # other apps
     - rest_framework
+    - corsheaders
+    # my apps
     - library
     - usersapp
   MIDDLEWARE:
     - django.middleware.security.SecurityMiddleware
     - django.contrib.sessions.middleware.SessionMiddleware
+    - corsheaders.middleware.CorsMiddleware
     - django.middleware.common.CommonMiddleware
     - django.middleware.csrf.CsrfViewMiddleware
     - django.contrib.auth.middleware.AuthenticationMiddleware
@@ -47,3 +51,4 @@ default:
   USE_I18N: true
   USE_L10N: true
   USE_TZ: true
+  CORS_ALLOWED_ORIGINS: [ http://localhost:3000 ]
