--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==3.1.7
 django-cors-headers==3.7.0
 django-filter==2.4.0
 djangorestframework==3.12.2
+djangorestframework-camel-case==1.2.0
 dynaconf==3.1.4
 isort==5.7.0
 lazy-object-proxy==1.5.2
